feat: support boot-ui